Attempt to fix search zoom on mobile.

--- a/src/.vuepress/theme/styles/mobile.styl
+++ b/src/.vuepress/theme/styles/mobile.styl
@@ -34,3 +34,5 @@ $mobileSidebarWidth = $sidebarWidth * 0.82
     div[class*="language-"]
       margin 0.85rem -1.5rem
       border-radius 0
+  .search-box input
+    font-size: 16px;
